Exercises for advanced selectors

--- a/more-selectors/example.html
+++ b/more-selectors/example.html
@@ -11,14 +11,24 @@
 <body>
     <main class="parent">
         <div class="child group1">
-            <div class="grand-child group1"></div>
+            Dude I'm a child, group 1
+            <div class="grand-child group1">
+                Dude I'm a grand-child, group 1
+            </div>
 
         </div>
+        <!--<nav>Soy un nav, no un nabo!</nav>-->
         <div class="child group2">
-            <div class="grand-child group2"></div>
+            Dude I'm a child, group 2
+            <div class="grand-child group2">
+                Dude I'm a grand-child, group 2
+            </div>
         </div>
         <div class="child group3">
-            <div class="grand-child group3"></div>
+            Dude I'm a child, group 3
+            <div class="grand-child group3">
+                Dude I'm a grand-child, group 3
+            </div>
         </div>
     </main>
 
